Fixed mouse-over menu gap
git-svn-id: https://wush.net/svn/mindalliance@4083 baad322d-9929-0410-88f0-f92e8ff3e1bd

--- a/channels/trunk/src/main/webapp/css/channels.css
+++ b/channels/trunk/src/main/webapp/css/channels.css
@@ -1283,7 +1283,7 @@ div.import-dialog {
 	background-color: #e6e6e6;
 	color: #000000;
 	list-style: none;
-	margin: -1px 2px 0 0;
+	margin: -2px 2px 0 0;
 	padding: 0;
 	z-index: 100000;
 	border:1px solid #C7C8CA;
